--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/5901743741.js"></script>
     <title>Navbar</title>
 </head>
 <body>
@@ -17,7 +18,8 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Projects</a></li>
-            </ul>    
+            </ul>
+            <i class="fas fa-bars" id="menu-bars"></i>    
         </nav>
     </div>
     
@@ -26,5 +28,7 @@
     <footer>
 
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
