--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </ul>
             <i class="fas fa-bars" id="menu-bars"></i>    
         </nav>
+        
+        <div class="push"></div>
     </div>
     
-    <div class="push"></div>
-
     <footer>
-
+        Footer 2019.
     </footer>
 
     <script src="app.js"></script>
